<resources>
    <string name="app_name">CalculadoraSencilla</string>
    <string name="mc">MC</string>
    <string name="mr">MR</string>
    <string name="mPlus">M+</string>
    <string name="mMinus">M-</string>
    <string name="ms">MS</string>
    <string name="m">M</string>
    <string name="percent">%</string>
    <string name="c">C</string>
    <string name="ce">CE</string>
    <string name="x">X</string>
</resources>