<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#1C1E20"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="40dp"
        android:padding="15dp"
        android:layout_margin="13dp"
        android:gravity="right"
        android:background="#2E2E2E"
        android:textColor="#FFFFFF"
        />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*">

        <TableRow>

            <Button
                android:id="@+id/MC"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_span="6"
                android:gravity="center"
                android:text="@string/mc"
                android:textColor="#FFFFFF"
                android:textSize="12sp"
                app:backgroundTint="#696969"></Button>

            <Button
                android:id="@+id/MR"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_span="6"
                android:gravity="center"
                android:text="@string/mr"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                app:backgroundTint="#696969"></Button>

            <Button
                android:id="@+id/MPlus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_span="6"
                android:gravity="center"
                android:text="@string/mPlus"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                app:backgroundTint="#696969"></Button>

            <Button
                android:id="@+id/MMinus"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_span="6"
                android:gravity="center"
                android:text="@string/mMinus"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                app:backgroundTint="#696969"></Button>

            <Button
                android:id="@+id/MS"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_span="6"
                android:gravity="center"
                android:text="@string/ms"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                app:backgroundTint="#696969"></Button>

            <Button
                android:id="@+id/M"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_span="6"
                android:gravity="center"
                android:text="@string/m"
                android:textSize="12sp"
                android:textColor="#FFFFFF"
                app:backgroundTint="#696969"></Button>
        </TableRow>
    </TableLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*">

        <TableRow
            android:layout_weight="1">
            <Button
                android:id="@+id/Percent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#696969"
                android:text="@string/percent"
                android:textSize="25sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4">
            </Button>
            <Button
                android:id="@+id/C"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#696969"
                android:text="@string/c"
                android:textSize="25sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4">
            </Button>
            <Button
                android:id="@+id/CE"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#696969"
                android:text="@string/ce"
                android:textSize="25sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4">
            </Button>
            <Button
                android:id="@+id/Cross"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#696969"
                android:text="@string/x"
                android:textSize="25sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4">
            </Button>
        </TableRow>

        <TableRow
            android:layout_weight="1">
            <Button
                android:id="@+id/minusOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#696969"
                android:text="1/X"
                android:textSize="20sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#696969"
                android:text="X^2"
                android:textSize="20sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:id="@+id/square"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#696969"
                android:text="n!"
                android:textSize="25sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:id="@+id/text2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#FF9800"
                android:text="/"
                android:textSize="30sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="#FBFAF9"
                android:layout_span="4"></Button>
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#2E2E2E"
                android:text="7"
                android:textSize="35sp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#2E2E2E"
                android:text="8"
                android:textSize="35sp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#2E2E2E"
                android:text="9"
                android:textSize="35sp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#FF9800"
                android:text="*"
                android:textSize="30sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#2E2E2E"
                android:text="4"
                android:textSize="35dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#2E2E2E"
                android:text="5"
                android:textSize="35dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#2E2E2E"
                android:text="6"
                android:textSize="35sp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#FF9800"
                android:text="-"
                android:textSize="30sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="#FFFFFE"
                android:layout_span="4"></Button>
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#2E2E2E"
                android:text="1"
                android:textSize="35sp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#2E2E2E"
                android:text="2"
                android:textSize="35sp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#2E2E2E"
                android:text="3"
                android:textSize="35sp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#FF9800"
                android:text="+"
                android:textSize="30sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#696969"
                android:text="+/-"
                android:textSize="25sp"
                android:gravity="center"
                android:layout_margin="3dp"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#2E2E2E"
                android:text="0"
                android:textSize="35sp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#696969"
                android:text="."
                android:textSize="45sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:backgroundTint="#FF9800"
                android:text="="
                android:textSize="25sp"
                android:layout_margin="3dp"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:layout_span="4"></Button>
        </TableRow>
    </TableLayout>

</LinearLayout>